# 2026-p1-BaKietNguyenUq

./: README.md  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
