[project]
name = "2026-p1-bakietnguyenuq"
version = "0.1.0"
description = ""
authors = [
    {name = "Ba Kiet Nguyen Uq",email = "bakiet.nguyen@student.uq.edu.au"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
